overflow issues solved

--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,7 @@ aside{
 	opacity:0.8;
 	border-radius:5px;
 	margin:10px 5px 5px 5px;
+	overflow:scroll;
 }
 
 .smPort{
